# cs-rust-flutter

./: .env.dist  .gitignore  docker-compose.yaml  readme.md
.github/workflows/: ci.yml
app/: README.md  build.yaml  config.json  config.json.dist  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: error_page.dart  main.dart  nfc_await_inside.dart  nfc_await_inside_locked.dart  nfc_await_outside.dart  opinion_page.dart
app/lib/models/: opinion.dart  toilets_model.dart
app/lib/providers/: opinion_provider.dart  toilet_provider.dart
app/lib/src/: app.dart
app/lib/src/api/graphql/: graphql_client.dart  graphql_client.g.dart  schema.graphql
app/lib/src/api/graphql/__generated__/: schema.ast.gql.dart  schema.schema.gql.dart  schema.schema.gql.g.dart  serializers.gql.dart  serializers.gql.g.dart
app/lib/src/api/graphql/links/: add_auth_header_link.dart
app/lib/src/common_widgets/map/: mapbox.dart
app/lib/src/constants/: api.dart  app_sizes.dart  paddings.dart  url.dart
app/lib/src/exceptions/: async_error_logger.dart  error_logger.dart
app/lib/src/features/settings/: settings_screen.dart
app/lib/src/routing/: app_router.dart  app_router.g.dart  not_found_screen.dart
app/lib/views/connexion/: connexion_view.dart
app/lib/views/inscription/: inscription_view.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: test.dart
documentation/: ci.md  keycloack.md
keycloak/: iw_cs_dev-realm.json  iw_cs_dev-users-0.json
server/: .env.dist  Cargo.toml  Dockerfile  README.md  diesel.toml
server/migrations/2024-07-15-143136_create_users/: down.sql  up.sql
server/migrations/2024-07-16-103714_create_companies/: up.sql
server/migrations/2024-07-16-125726_create_toilets/: down.sql  up.sql
server/migrations/2024-07-17-095742_toilet_visits/: down.sql  up.sql
server/migrations/2024-07-17-101246_comments/: up.sql
server/src/: main.rs  schema.rs
server/src/graphql_logic/: context.rs  db.rs  endpoints.rs  graphql.rs  mod.rs
server/src/models/: comment.rs  company.rs  mod.rs  toilet.rs  user.rs
server/src/providers/: keycloak_admin_provider.rs  mod.rs
server/src/services/: comment_service.rs  mod.rs  toilet_service.rs  user_service.rs
server/tests/: graphql_tests.rs
(+39 files in other folders)
